bany działające + ograniczenie plików

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -1,11 +1,14 @@
-extends layout
+include  layout
 
 block content
-    include logout
     a.btn.btn-primary(href = "/main") Main Page
+    a.btn.btn-primary(href = "/user") User Page
+    a.btn.btn-primary(href = "/ban") Go to bans
     h1 ADMIN PAGE
 
     - var values = users;
     ul
         each val in values.length ? values : ['There are no values']
             li= val
+
+include logout
