--- a/views/ban.pug
+++ b/views/ban.pug
@@ -1,4 +1,4 @@
-extends layout
+include layout
 
 block content
     h1 Ban
@@ -10,4 +10,6 @@ block content
             label(for='time') Time being banned
             input.form-control(type='text' id='time' placeholder='time' name='time')
         button.btn.btn-primary(type='submit') BAN!
+
+include logout
 
