--- a/views/user.pug
+++ b/views/user.pug
@@ -1,6 +1,7 @@
-extends layout
+include layout
 
 block content
-    include logout
     a.btn.btn-primary(href = "/main") Main Page
     h1 USER PAGE
+
+include logout
